feat(pipeline): 新增批量输出处理及降频刷新支持
- 引入 `outputBatcher`，实现批量输出处理逻辑，减少消息发送频率。
- 在 TUI 和管道处新增 `OutputBatchMsg` 支持，优化日志展示性能。
- 为 Docker 构建及 SSH 任务配置添加 `force_refresh`，实现可选的降级刷新模式。
- 更新模板文件，增加 `force_refresh` 示例以减少日志刷屏。
- 优化任务输出处理器，支持按需切换逐行与批量输出模式。

--- a/resources/templates/config/full.yaml
+++ b/resources/templates/config/full.yaml
@@ -86,6 +86,8 @@ pipeline:
           context: "./user-service"
           image_name: "${REGISTRY_PREFIX}/user-service"
           tag: "${APP_VERSION}"
+          # 强制降级刷新（合并日志输出），避免 Docker 构建日志刷屏
+          force_refresh: true
           build_args:
             JAR_FILE: "target/*.jar"
             BUILD_ENV: "${DEPLOY_ENV}"
@@ -97,6 +99,8 @@ pipeline:
           context: "./order-service"
           image_name: "${REGISTRY_PREFIX}/order-service"
           tag: "${APP_VERSION}"
+          # 强制降级刷新（合并日志输出），避免 Docker 构建日志刷屏
+          force_refresh: true
 
       # 多平台构建示例
       - name: "网关服务镜像 (多平台)"
@@ -106,6 +110,8 @@ pipeline:
           context: "./gateway-service"
           image_name: "${REGISTRY_PREFIX}/gateway-service"
           tag: "${APP_VERSION}"
+          # 强制降级刷新（合并日志输出），避免 Docker 构建日志刷屏
+          force_refresh: true
           # 多平台构建 (需要 docker buildx)
           platforms:
             - "linux/amd64"
@@ -146,6 +152,8 @@ pipeline:
         type: "ssh"
         config:
           server: "production"
+          # 强制降级刷新（合并日志输出），避免 SSH 远程输出刷屏
+          force_refresh: true
           # 方式1: 内联命令
           commands:
             - "cd /opt/services"
